# healthcare-iomt-risk

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.md.old  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  test_grc.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  csv2xlsx.yml  release.yml
01-Research/: Sources.md  iomt_risk_sources.md
02-Matrices/: risk_matrix.csv
03-Methodology/: README.md
04-Planning/: README.md
data/catalog/: free-security-resources.md  mitre_ics_techniques.csv  owasp_iot_top10.csv  scenarios.csv
docs/: medical-practice-case-study.md  resource-catalog.md
docs/architecture/: ADR-0001-scope.md
docs/cces/: cces_template.csv
docs/compliance/: iso27002-iomt-mapping.md  mapping.md
src/riskops/cli/: assess.py  convert.py  generate.py  grc.py  main.py  pentest.py  report.py  soc.py  validate.py
src/riskops/converters/: __init__.py  csv_to_xlsx.py
src/riskops/core/: constants.py
src/riskops/grc/: __init__.py  assessment.py  compliance.py
src/riskops/utils/: __init__.py  security.py
src/riskops/validators/: __init__.py  link_validator.py
tests/test_grc/: test_assessment.py  test_compliance.py
tools/: csv2xlsx.py  demo.sh  sec_checks.sh  validate_controls_link.py
